...
    "dialog": {
      "title": "Are you sure?",
      "body": "Are you sure you want to reset the current PIN?",
      "ok": "Change",
      "cancel": "Cancel"
    },
    "toast": "Success! Your new PIN has been saved",
    "enter_pin": {
      "instruction": "Enter your current PIN",
      "error_title": "PIN incorrect",
      "error": "Enter your current PIN",
      "error_action": "OK"
    },
...
    "report_errors": "Error and app status reporting",
    "report_errors_explanation": "By enabling error and app status reporting you are helping us improve the user experience.",
    "enable_screenshots": "Enable screenshots",
    "enable_screenshots_explanation": "When enabled, the app will not be blurred in the app switcher.",
    "developer_mode": "Developer mode",
    "other": "Other",
    "language": "Language",
    "use_system_language": "Use system language",
    "change_pin": "Change PIN",
    "delete": "Delete data",
    "confirm_delete_dialog": {
      "title": "Delete data",
      "explanation": "If you proceed, all data will be deleted from your Yivi app. If you wish to continue using Yivi you will have to reload the data.",
      "confirm": "Yes, delete everything",
      "deny": "Cancel"
    }
  },
  "ui": {
    "loading": "Loading…",
    "step_of_steps": "Step {i} of {n}",
...
