...
              sortKey: const OrdinalSortKey(0),
              child: buildHeaderText('more_tab.app_management'),
            ),
            TilesCard(
              children: [
                InternalLinkTile(
                  key: Key('open_settings_screen_button'),
                  labelTranslationKey: 'more_tab.settings',
                  iconData: Icons.settings_outlined,
                  onTap: context.goSettingsScreen,
                ),
                InternalLinkTile(
                  labelTranslationKey: 'more_tab.faq',
...
                  urlLinkKey: 'more_tab.privacy_policy_link',
                ),
              ],
            ),
            spacerWidget,
            YiviThemedButton(
              key: const Key('log_out_button'),
              style: YiviButtonStyle.filled,
              label: 'more_tab.log_out',
              onPressed: () {
                IrmaRepositoryProvider.of(context).lock();
                widget.onChangeTab(IrmaNavBarTab.data);
              },
...
